Update connection to css and js file.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat Interface</title>
-    <link rel="stylesheet" href="../static/css/index.css">
-    <script src="../static/js/index.js" defer></script>
+    <link rel="stylesheet" href="static/css/index.css">
+    <script src="static/js/index.js" defer></script>
 </head>
 <body>
     <div class="chat-container">
