--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat Interface</title>
     <link rel="stylesheet" href="static/css/index.css">
-    <script src="static/js/index.js" defer></script>
 </head>
 <body>
-    <div class="chat-container">
-        <div class="chat-messages" id="chat-messages">
-            <!-- Chat messages will be appended here -->
-        </div>
-        <div class="input-container">
-            <input type="text" id="message-input" placeholder="Type your message...">
-            <button onclick="sendMessage()">Send</button>
-        </div>
+    <div class="title-container">
+        <h1>Chat Interface</h1>
     </div>
+    <div class="description-container">
+        <p>Hi! So you've seen my repo, as it name, this website is build for deploying llm models. So enjoy my work deploying your llm model!</p>
+    </div>
+    <form class="link-container" id="link-container">
+        <input type="text" id="link-input" placeholder="Type your api link...">
+        <button type="submit">Submit link</button>
+    </form>
+    <script src="static/js/index.js"></script>
 </body>
 </html>
